objects/CMPL123QMS__Requirement__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__EFFECTIVITY_RELEASE_INFORMATION__c</fullName>
        <label>EFFECTIVITY RELEASE INFORMATION</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Functional_Overview__c</fullName>
        <label>Functional Overview</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Parent_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Requirement</label>
        <referenceTo>CMPL123QMS__Requirement__c</referenceTo>
        <relationshipLabel>Child Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Purpose__c</fullName>
        <label>Purpose</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Related_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Release</label>
        <referenceTo>CMPL123QMS__Release__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Revision__c</fullName>
        <label>Revision</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Scope__c</fullName>
        <label>Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Requirement</label>
    <nameField>
        <displayFormat>RNo-{00000}</displayFormat>
        <label>RNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>